core/iox_v1_query_api/src/response/snapshots/iox_v1_query_api__response__chunked__tests__single_chunk.snap
---
source: iox_v1_query_api/src/response/chunked.rs
expression: "collect_output(ChunkedResponseStream::new(vec![statement], 2)).await"
---
{"results":[{"statement_id":0,"series":[{"name":"m1","columns":["time","t1","f1"],"values":[["1970-01-01T00:00:01Z","t1a",1],["1970-01-01T00:00:02Z","t1a",2]]}]}]}
